--- a/dyn/ren.html
+++ b/dyn/ren.html
@@ -157,9 +157,12 @@
                 <div class="figureContainer width500" id="ren-cf">
                     <canvas id="ren-cf-c" width="500" height="300" class="figureImage" >
                     </canvas>
-                    <button class="option-toggle:ren-cf-c:conForce">conservative forces</button>
-                    <button class="option-toggle:ren-cf-c:nconForce">non-conservative forces</button>
                 </div>
+                <p>
+                    If the force moving an object from point $A$ to point $B$ was conservative, the work done by that force
+                    in all paths is equal. If the force was non-conservative, the work done by that force is not equal, and
+                    it depends on the path length.
+                </p>
             </div>
         </div>
         <div class="contentBlock">
