Revert to MathJax v2

--- a/dyn/reg.html
+++ b/dyn/reg.html
@@ -7,16 +7,16 @@
     <link href="../style.css" type="text/css" rel="stylesheet" />
     <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
-    <!-- <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-    <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script> -->
-    <script>
+    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+    <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+    <!-- <script>
       MathJax = {
         tex: {
           inlineMath: [['$', '$'], ['\\(', '\\)']]
         }
       };
     </script>
-    <script type="text/javascript" id="MathJax-script" src="../MathJax-master2/es5/tex-mml-chtml.js"></script>
+    <script type="text/javascript" id="MathJax-script" src="../MathJax-master2/es5/tex-mml-chtml.js"></script> -->
     <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="../js/sylvester.js" type="text/javascript"></script>
     <script src="../js/sha1.js" type="text/javascript"></script>
