Fix notation in rolling motion, rigid bodies

--- a/dyn/ren.html
+++ b/dyn/ren.html
@@ -303,7 +303,7 @@
                                     Integrating both sides:
                                     \[\begin{aligned}
                                     \int_{U_1}^{U_2} dU &amp;= \int_{x_1}^{x_2} kx \, dx \\
-                                    \Delta U &amp; = \frac{1}{2}k(\Delta x)^2
+                                    \Delta U &amp; = \frac{1}{2}k\Delta x^2 = \frac{1}{2}k(x^2_2 - x^2_1)
                                     \end{aligned}\]
                                   </p>
                                   <p>
