--- a/dyn/rkg.html
+++ b/dyn/rkg.html
@@ -486,15 +486,15 @@
               \[\begin{aligned}
               \vec{r}_Q &amp;= \vec{r}_P + \vec{r}_{PQ} \\
               \vec{v}_Q &amp;= \vec{v}_P
-              + \omega \, \vec{r}_{PQ}^\perp \\
+              + \omega_z \, \vec{r}_{PQ}^\perp \\
               \vec{a}_Q &amp;= \vec{a}_P
-              + \alpha \, \vec{r}_{PQ}^\perp
+              + \alpha_z \, \vec{r}_{PQ}^\perp
               - \omega^2 \, \vec{r}_{PQ}
               \end{aligned}\]
             </p>
             <p>
               Points $P$ and $Q$ are two locations on a rigid
-              body. Scalars $\omega$ and $\alpha$ are the scalar
+              body. Scalars $\omega_z$ and $\alpha_z$ are the scalar
               angular velocity and angular acceleration of the rigid
               body (positive counter-clockwise).
             </p>
