--- a/dyn/rko.html
+++ b/dyn/rko.html
@@ -257,8 +257,8 @@
           <div class="envBody">
             <p>
               \[\begin{aligned}
-              \vec{v}_C &amp;= -r \omega \,\hat\imath \\
-              \vec{a}_C &amp;= -r \alpha \,\hat\imath
+              \vec{v}_C &amp;= -r \omega_z \,\hat\imath \\
+              \vec{a}_C &amp;= -r \alpha_z \,\hat\imath
               \end{aligned}\]
             </p>
           </div>
@@ -271,16 +271,16 @@
 
               \[\begin{aligned}
               \vec{v}_C &amp;= \vec{v}_A + \vec{\omega} \times \vec{r}_{AC} \\
-              &amp;= \omega r_{AC}^\perp \\
-              &amp;= -r \omega \,\hat\imath.
+              &amp;= \omega_z r_{AC}^\perp \\
+              &amp;= -r \omega_z \,\hat\imath.
               \end{aligned}\]
 
               Differentiating to obtain acceleration results in:
 
               \[\begin{aligned}
-              \vec{v}_C &amp;= -r \omega \,\hat\imath \\
-              \dot{\vec{v}}_C &amp;= -r \dot\omega \,\hat\imath \\
-              \vec{a}_C &amp;= -r \alpha \,\hat\imath.
+              \vec{v}_C &amp;= -r \omega_z \,\hat\imath \\
+              \dot{\vec{v}}_C &amp;= -r \dot\omega_z \,\hat\imath \\
+              \vec{a}_C &amp;= -r \alpha_z \,\hat\imath.
               \end{aligned}\]
             </p>
           </div>
@@ -544,15 +544,15 @@
             <p>
               $\text{Rolling on the inside}:$
               \[\begin{aligned}
-              \vec{v}_C &amp;= -r \omega \,\hat{I}\\
-              \vec{a}_C &amp;= -r \alpha \,\hat{I}
+              \vec{v}_C &amp;= -r \omega_z \,\hat{I}\\
+              \vec{a}_C &amp;= -r \alpha_z \,\hat{I}
               + \frac{(r\omega)^2}{R} \,\hat{J}
               \end{aligned}\]
               
               $\text{Rolling on the outside}:$
               \[\begin{aligned}
-              \vec{v}_C &amp;= -r \omega \,\hat{I}\\
-              \vec{a}_C &amp;= -r \alpha \,\hat{I}
+              \vec{v}_C &amp;= -r \omega_z \,\hat{I}\\
+              \vec{a}_C &amp;= -r \alpha_z \,\hat{I}
               - \frac{(r\omega)^2}{R} \,\hat{J}
               \end{aligned}\]
             </p>
